; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/renesas_usbhs/extr_mod.c_usbhs_mod_register.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/renesas_usbhs/extr_mod.c_usbhs_mod_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usbhs_priv = type { i32 }
%struct.usbhs_mod = type { %struct.usbhs_priv* }
%struct.usbhs_mod_info = type { %struct.usbhs_mod** }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usbhs_mod_register(%struct.usbhs_priv* %0, %struct.usbhs_mod* %1, i32 %2) #0 {
  %4 = alloca %struct.usbhs_priv*, align 8
  %5 = alloca %struct.usbhs_mod*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.usbhs_mod_info*, align 8
  store %struct.usbhs_priv* %0, %struct.usbhs_priv** %4, align 8
  store %struct.usbhs_mod* %1, %struct.usbhs_mod** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.usbhs_priv*, %struct.usbhs_priv** %4, align 8
  %9 = call %struct.usbhs_mod_info* @usbhs_priv_to_modinfo(%struct.usbhs_priv* %8)
  store %struct.usbhs_mod_info* %9, %struct.usbhs_mod_info** %7, align 8
  %10 = load %struct.usbhs_mod*, %struct.usbhs_mod** %5, align 8
  %11 = load %struct.usbhs_mod_info*, %struct.usbhs_mod_info** %7, align 8
  %12 = getelementptr inbounds %struct.usbhs_mod_info, %struct.usbhs_mod_info* %11, i32 0, i32 0
  %13 = load %struct.usbhs_mod**, %struct.usbhs_mod*** %12, align 8
  %14 = load i32, i32* %6, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.usbhs_mod*, %struct.usbhs_mod** %13, i64 %15
  store %struct.usbhs_mod* %10, %struct.usbhs_mod** %16, align 8
  %17 = load %struct.usbhs_priv*, %struct.usbhs_priv** %4, align 8
  %18 = load %struct.usbhs_mod*, %struct.usbhs_mod** %5, align 8
  %19 = getelementptr inbounds %struct.usbhs_mod, %struct.usbhs_mod* %18, i32 0, i32 0
  store %struct.usbhs_priv* %17, %struct.usbhs_priv** %19, align 8
  ret void
}

declare dso_local %struct.usbhs_mod_info* @usbhs_priv_to_modinfo(%struct.usbhs_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
